# narrator-ai-gradio

./: .env.example  CODEOWNERS  LICENSE  README.md  app.py  client.py  data.py  pyproject.toml  requirements.txt
.github/: labeler.yml
.github/workflows/: ai-review.yml  auto-label.yml  ci.yml  conventional-commit.yml  deploy.yml
tests/: test_app.py  test_client.py  test_data.py
