[project]
name = "narrator-ai-gradio"
version = "0.1.0"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["gradio.*", "httpx_sse.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
